--- a/index.html
+++ b/index.html
@@ -40,9 +40,54 @@
 
     <div class="container">
       <div class="row">
-        <div class="col">A Col!</div>
+        <div class="col">
+          <div class="box"></div>  
+        </div>
+        <div class="col">
+          <div class="box"></div>  
+        </div>
+        <div class="col">
+          <div class="box"></div>  
+        </div>
       </div>
 
+      <div class="row">
+        <div class="col">
+          <div class="box"></div>  
+        </div>
+        <div class="col">
+          <div class="box"></div>  
+        </div>
+        <div class="col">
+          <div class="box"></div>  
+        </div>
+        <div class="col">
+          <div class="box"></div>  
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <h2>Something New</h2>
+          <p>Lorum ipsum YEAH BOUYEEE.</p>
+        </div>
+        <div class="col">
+          <h2>Something New</h2>
+          <p>Lorum ipsum YEAH BOUYEEE.</p>
+        </div>
+        <div class="col">
+          <h2>Something New</h2>
+          <p>Lorum ipsum YEAH BOUYEEE.</p>
+        </div>
+        <div class="col">
+          <h2>Something New</h2>
+          <p>Lorum ipsum YEAH BOUYEEE.</p>
+        </div>
+        <div class="col">
+          <h2>Something New</h2>
+          <p>Lorum ipsum YEAH BOUYEEE.</p>
+        </div>
+              </div>
     </div>
 
 
