--- a/index.2.7.html
+++ b/index.2.7.html
@@ -40,24 +40,53 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-8">
-          <div class="box"></div>
+        <div class="col">
+          <div class="box"></div>  
         </div>
-        <div class="col-4">
-          <div class="box"></div>
+        <div class="col">
+          <div class="box"></div>  
+        </div>
+        <div class="col">
+          <div class="box"></div>  
         </div>
       </div>
 
       <div class="row">
-        <div class="col-3">
-          <div class="box"></div>
+        <div class="col">
+          <div class="box"></div>  
         </div>
-        <div class="col-6">
-          <div class="box"></div>
+        <div class="col">
+          <div class="box"></div>  
         </div>
-        <div class="col-3">
-          <div class="box"></div>
+        <div class="col">
+          <div class="box"></div>  
         </div>
+        <div class="col">
+          <div class="box"></div>  
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <h2>Something New</h2>
+          <p>Lorum ipsum YEAH BOUYEEE.</p>
+        </div>
+        <div class="col">
+          <h2>Something New</h2>
+          <p>Lorum ipsum YEAH BOUYEEE.</p>
+        </div>
+        <div class="col">
+          <h2>Something New</h2>
+          <p>Lorum ipsum YEAH BOUYEEE.</p>
+        </div>
+        <div class="col">
+          <h2>Something New</h2>
+          <p>Lorum ipsum YEAH BOUYEEE.</p>
+        </div>
+        <div class="col">
+          <h2>Something New</h2>
+          <p>Lorum ipsum YEAH BOUYEEE.</p>
+        </div>        
       </div>
     </div>
 
