--- a/index.2.8.html
+++ b/index.2.8.html
@@ -40,28 +40,56 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-lg-8 col-md-8">
-          <div class="box"></div>
+        <div class="col">
+          <div class="box"></div>  
         </div>
-        <div class="col-lg-4 col-md-8">
-          <div class="box"></div>
+        <div class="col">
+          <div class="box"></div>  
+        </div>
+        <div class="col">
+          <div class="box"></div>  
         </div>
       </div>
+
       <div class="row">
-        <div class="col-lg-3 col-md-3">
-          <div class="box"></div>
+        <div class="col">
+          <div class="box"></div>  
         </div>
-        <div class="col-lg-3 col-md-3">
-          <div class="box"></div>
+        <div class="col">
+          <div class="box"></div>  
         </div>
-        <div class="col-lg-3 col-md-3">
-          <div class="box"></div>
+        <div class="col">
+          <div class="box"></div>  
         </div>
-        <div class="col-lg-3 col-md-3">
-          <div class="box"></div>
+        <div class="col">
+          <div class="box"></div>  
         </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <h2>Something New</h2>
+          <p>Lorum ipsum YEAH BOUYEEE.</p>
+        </div>
+        <div class="col">
+          <h2>Something New</h2>
+          <p>Lorum ipsum YEAH BOUYEEE.</p>
+        </div>
+        <div class="col">
+          <h2>Something New</h2>
+          <p>Lorum ipsum YEAH BOUYEEE.</p>
+        </div>
+        <div class="col">
+          <h2>Something New</h2>
+          <p>Lorum ipsum YEAH BOUYEEE.</p>
+        </div>
+        <div class="col">
+          <h2>Something New</h2>
+          <p>Lorum ipsum YEAH BOUYEEE.</p>
+        </div>        
       </div>
     </div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <!--
