up to and including 3.12

--- a/index.3.11.html
+++ b/index.3.11.html
@@ -11,32 +11,32 @@
     <link href="/assets/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="style.css" rel="stylesheet">
-    <title>Bootstrap, Y'all!</title>
+    <title>3.11</title>
   </head>
   <body>
-    <h1>3.12</h1>
 
-    <img class="rounded" src="assets/images/windows.png" alt="3.11 4 lyfe" />
-    <p>
-      rounded
-    </p>
+    <h1>Hello, h1</h1>
+    <p>Traditional h1</p>
     <hr />
-    <!--
-    <img class="img-thumbnail" src="assets/images/spoderman_large.gif" alt="An illustration of Spoderman (not 'Spiderman')" />
-    <p>
-      class img-thumbnail adds a border
-    </p>
+
+    <p class="h1">Hello p class h1</p>
+    <p>That looks like a heading but does it pass 508 validation?</p>
     <hr />
-    <img class="img-fluid" src="assets/images/spoderman_large.gif" alt="An illustration of Spoderman (not 'Spiderman')" />
-    <p>
-      class img-fluid
-    </p>
-    <img src="assets/images/spoderman_large.gif" alt="An illustration of Spoderman (not 'Spiderman')" />
-    <p>
-      not responsive
-    </p>
+
+    <h1>
+      Fancy Display Heading
+      <small class="text-muted">with bonus small class text-muted</small>
+    </h1>
+    <p>Interesting way to have two levels of emphasis but will it 508?</p>
     <hr />
-    -->
+
+    <h1 class="display-1">Hello h1 class display-1</h1>
+    <p>The font here is way bigger.  Typography is way different</p>
+    <hr />
+
+    <p class="lead">
+      hello p class lead
+    </p>
 
     <!--
     fancy CDN version (which obviously does not work when offline, which is my predicament at the time of writing this rambling note that nobody will ever read)
