--- a/sections/index.02.10.vertical-alignment.html
+++ b/sections/index.02.10.vertical-alignment.html
@@ -38,6 +38,7 @@
   <body>
     <h1>2.10 Vertical Alignment</h1>
     <a href="http://0.0.0.0/sections/" class="btn btn-secondary">&lt; Back to Sections List</a>
+    <a href="http://0.0.0.0/" class="btn btn-secondary">^ To Current</a>
 
     <div class="container">
       <div class="row bg-warning height align-items-end">
