--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
   </head>
   <body>
     <h1>4.17</h1>
+    <!--
+    <a href="http://0.0.0.0/sections/" class="btn btn-secondary">&lt; Back to Sections List</a>
+    -->
+    <a href="http://0.0.0.0/sections/" class="btn btn-secondary">To Sections List</a>
 
     <div class="container">
       <div class="row justify-content-center">
