--- a/sections/index.02.09.html
+++ b/sections/index.02.09.html
@@ -39,6 +39,8 @@
   <body>
     <h1>2.9</h1>
     <a href="http://0.0.0.0/sections/" class="btn btn-secondary">&lt; Back to Sections List</a>
+    <a href="http://0.0.0.0/" class="btn btn-secondary">^ To Current</a>
+
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-8">
