--- a/sections/index.03.12.html
+++ b/sections/index.03.12.html
@@ -16,6 +16,7 @@
   <body>
     <h1>3.12</h1>
     <a href="http://0.0.0.0/sections/" class="btn btn-secondary">&lt; Back to Sections List</a>
+    <a href="http://0.0.0.0/" class="btn btn-secondary">^ To Current</a>
 
     <img class="rounded" src="assets/images/windows.png" alt="3.11 4 lyfe" />
     <p>
