--- a/sections/index.03.16.html
+++ b/sections/index.03.16.html
@@ -16,6 +16,7 @@
   <body>
     <h1>3.13</h1>
     <a href="http://0.0.0.0/sections/" class="btn btn-secondary">&lt; Back to Sections List</a>
+    <a href="http://0.0.0.0/" class="btn btn-secondary">^ To Current</a>
 
     <h2>table-hover table-dark</h2>
     <table class="table table-hover table-dark">
