--- a/sections/index.04.16.html
+++ b/sections/index.04.16.html
@@ -16,6 +16,7 @@
   <body>
     <h1>4.16</h1>
     <a href="http://0.0.0.0/sections/" class="btn btn-secondary">&lt; Back to Sections List</a>
+    <a href="http://0.0.0.0/" class="btn btn-secondary">^ To Current</a>
 
     <div class="container">
       <div class="row justify-content-center">
