--- a/sections/index.04.17.html
+++ b/sections/index.04.17.html
@@ -16,6 +16,8 @@
   <body>
     <h1>4.17</h1>
     <a href="http://0.0.0.0/sections/" class="btn btn-secondary">&lt; Back to Sections List</a>
+    <a href="http://0.0.0.0/" class="btn btn-secondary">^ To Current</a>
+
 
     <div class="container">
       <div class="row justify-content-center">
